[package]
name = "urauth-runtime"
version = "0.1.1"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.3.1", default-features = false, features = ["derive"] }
smallvec = "1.10.0"

# Local
pallet-urauth = { version = "0.1.1", default-features = false, path = "../../../../substrate/frame/urauth" }

# System
frame-benchmarking = { path = "../../../../substrate/frame/benchmarking", default-features = false, optional = true}
frame-executive = { path = "../../../../substrate/frame/executive", default-features = false}
frame-support = { path = "../../../../substrate/frame/support", default-features = false}
frame-system = { path = "../../../../substrate/frame/system", default-features = false}
frame-system-benchmarking = { path = "../../../../substrate/frame/system/benchmarking", default-features = false, optional = true}
frame-system-rpc-runtime-api = { path = "../../../../substrate/frame/system/rpc/runtime-api", default-features = false}
frame-try-runtime = { path = "../../../../substrate/frame/try-runtime", default-features = false, optional = true}

# Frames
pallet-assets = { path = "../../../../substrate/frame/assets", default-features = false}
pallet-aura = { path = "../../../../substrate/frame/aura", default-features = false}
pallet-authorship = { path = "../../../../substrate/frame/authorship", default-features = false}
pallet-balances = { path = "../../../../substrate/frame/balances", default-features = false}
pallet-preimage = { path = "../../../../substrate/frame/preimage", default-features = false}
pallet-session = { path = "../../../../substrate/frame/session", default-features = false}
pallet-system-token = { path = "../../../../substrate/frame/system-token", default-features = false}
pallet-scheduler = { path = "../../../../substrate/frame/scheduler", default-features = false}
pallet-sudo = { path = "../../../../substrate/frame/sudo", default-features = false}
pallet-timestamp = { path = "../../../../substrate/frame/timestamp", default-features = false}
pallet-transaction-payment = { path = "../../../../substrate/frame/transaction-payment", default-features = false}
pallet-transaction-payment-rpc-runtime-api = { path = "../../../../substrate/frame/transaction-payment/rpc/runtime-api", default-features = false}
pallet-system-token-tx-payment = { path = "../../../../substrate/frame/transaction-payment/system-token-tx-payment", default-features = false}

# Primitives
sp-api = { path = "../../../../substrate/primitives/api", default-features = false}
sp-block-builder = { path = "../../../../substrate/primitives/block-builder", default-features = false}
sp-consensus-aura = { path = "../../../../substrate/primitives/consensus/aura", default-features = false}
sp-core = { path = "../../../../substrate/primitives/core", default-features = false}
sp-genesis-builder = { path = "../../../../substrate/primitives/genesis-builder", default-features = false }
sp-inherents = { path = "../../../../substrate/primitives/inherents", default-features = false}
sp-offchain = { path = "../../../../substrate/primitives/offchain", default-features = false}
sp-runtime = { path = "../../../../substrate/primitives/runtime", default-features = false}
sp-session = { path = "../../../../substrate/primitives/session", default-features = false}
sp-std = { path = "../../../../substrate/primitives/std", default-features = false}
sp-storage = { path = "../../../../substrate/primitives/storage", default-features = false}
sp-transaction-pool = { path = "../../../../substrate/primitives/transaction-pool", default-features = false}
sp-version = { path = "../../../../substrate/primitives/version", default-features = false}
sp-weights = { path = "../../../../substrate/primitives/weights", default-features = false}

# Infra Relay
infrablockchain-core-primitives = { path = "../../../../infrablockchain/core-primitives", default-features = false}
infra-relay-runtime-constants = { path = "../../../../infrablockchain/runtime/infra-relay/constants", default-features = false}
parachain-primitives = { path = "../../../../infrablockchain/parachain", default-features = false}
runtime-common = { path = "../../../../infrablockchain/runtime/common", default-features = false}
runtime-parachains = { path = "../../../../infrablockchain/runtime/parachains", default-features = false}

# Xcm
pallet-xcm = { path = "../../../../infrablockchain/xcm/pallet-xcm", default-features = false}
pallet-asset-link = { package = "infra-asset-link", path = "../../../../infrablockchain/xcm/infra-asset-link", default-features = false }
xcm-primitives = { path = "../../../../infrablockchain/xcm/xcm-primitives", default-features = false}
xcm = { package = "staging-xcm", path = "../../../../infrablockchain/xcm", default-features = false}
xcm-builder = { package = "staging-xcm-builder", path = "../../../../infrablockchain/xcm/xcm-builder", default-features = false}
xcm-executor = { package = "staging-xcm-executor", path = "../../../../infrablockchain/xcm/xcm-executor", default-features = false}

# Cumulus
cumulus-pallet-aura-ext = { path = "../../../pallets/aura-ext", default-features = false }
cumulus-pallet-dmp-queue = { path = "../../../pallets/dmp-queue", default-features = false }
cumulus-pallet-parachain-system = { path = "../../../pallets/parachain-system", default-features = false, features = ["parameterized-consensus-hook",] }
cumulus-pallet-session-benchmarking = { path = "../../../pallets/session-benchmarking", default-features = false}
cumulus-pallet-xcm = { path = "../../../pallets/xcm", default-features = false }
cumulus-pallet-xcmp-queue = { path = "../../../pallets/xcmp-queue", default-features = false }
cumulus-primitives-core = { path = "../../../primitives/core", default-features = false }
cumulus-primitives-utility = { path = "../../../primitives/utility", default-features = false }
cumulus-primitives-timestamp = { path = "../../../primitives/timestamp", default-features = false }
pallet-collator-selection = { path = "../../../pallets/collator-selection", default-features = false }
parachain-info = { path = "../../pallets/parachain-info", default-features = false }
parachains-common = { path = "../../common", default-features = false }
assets-common = { path = "../assets/common", default-features = false }

[dev-dependencies]
hex-literal = "0.3.4"

[build-dependencies]
substrate-wasm-builder = { path = "../../../../substrate/utils/wasm-builder" }

[features]
default = ["std"]
std = [
	"codec/std",
	"log/std",
	"scale-info/std",
	"cumulus-pallet-aura-ext/std",
	"cumulus-pallet-dmp-queue/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-xcm/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-primitives-utility/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"frame-system-benchmarking/std",
	"pallet-scheduler/std",
	"pallet-preimage/std",
	"pallet-assets/std",
	"pallet-asset-link/std",
	"xcm-primitives/std",
	"frame-benchmarking/std",
	"frame-try-runtime/std",
	"pallet-system-token-tx-payment/std",
	"pallet-aura/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-collator-selection/std",
	"pallet-session/std",
	"pallet-system-token/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-xcm/std",
	"pallet-urauth/std",
	"parachain-info/std",
    "infrablockchain-core-primitives/std",
	"infra-relay-runtime-constants/std",
	"parachain-primitives/std",
	"runtime-common/std",
	"runtime-parachains/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-storage/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"sp-weights/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
	"assets-common/std",
	"parachains-common/std",
]

runtime-benchmarks = [
	"pallet-asset-link/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-collator-selection/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"cumulus-pallet-session-benchmarking/runtime-benchmarks",
	"cumulus-pallet-xcmp-queue/runtime-benchmarks",
]

try-runtime = [
	"cumulus-pallet-aura-ext/try-runtime",
	"cumulus-pallet-dmp-queue/try-runtime",
	"cumulus-pallet-parachain-system/try-runtime",
	"cumulus-pallet-xcm/try-runtime",
	"cumulus-pallet-xcmp-queue/try-runtime",
	"frame-executive/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime/try-runtime",
	"pallet-aura/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-collator-selection/try-runtime",
	"pallet-session/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-xcm/try-runtime",
	"parachain-info/try-runtime",
]
