[package]
name = "node-core-backing"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures = "0.3.21"
sp-keystore = { path = "../../../../substrate/primitives/keystore" }
primitives = { path = "../../../primitives" }
node-primitives = { path = "../../primitives" }
node-subsystem = { path = "../../subsystem" }
node-subsystem-util = { path = "../../subsystem-util" }
erasure-coding = { package = "infrablockchain-erasure-coding", path = "../../../erasure-coding" }
statement-table = { package = "polkadot-statement-table", path = "../../../statement-table" }
bitvec = { version = "1.0.0", default-features = false, features = ["alloc"] }
gum = { package = "tracing-gum", path = "../../gum" }
thiserror = "1.0.48"
fatality = "0.0.6"

[dev-dependencies]
sp-core = { path = "../../../../substrate/primitives/core" }
sp-application-crypto = { path = "../../../../substrate/primitives/application-crypto" }
sp-keyring = { path = "../../../../substrate/primitives/keyring" }
sc-keystore = { path = "../../../../substrate/client/keystore" }
sp-tracing = { path = "../../../../substrate/primitives/tracing" }
futures = { version = "0.3.21", features = ["thread-pool"] }
assert_matches = "1.4.0"
node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
test-helpers = { package = "polkadot-primitives-test-helpers", path = "../../../primitives/test-helpers" }
