[package]
name = "node-core-candidate-validation"
description = "Polkadot crate that implements the Candidate Validation subsystem. Handles requests to validate candidates according to a PVF."
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.57"
futures = "0.3.21"
futures-timer = "3.0.2"
gum = { package = "tracing-gum", path = "../../gum" }

sp-maybe-compressed-blob = { package = "sp-maybe-compressed-blob", path = "../../../../substrate/primitives/maybe-compressed-blob" }
parity-scale-codec = { version = "3.6.1", default-features = false, features = ["bit-vec", "derive"] }

primitives = { path = "../../../primitives" }
parachain-primitives = { path = "../../../parachain" }
node-primitives = { path = "../../primitives" }
node-subsystem = { path = "../../subsystem" }
node-subsystem-util = { path = "../../subsystem-util" }
node-metrics = { path = "../../metrics" }
infrablockchain-overseer = { path = "../../overseer" }

[target.'cfg(not(any(target_os = "android", target_os = "unknown")))'.dependencies]
node-core-pvf = { path = "../pvf" }

[dev-dependencies]
sp-keyring = { path = "../../../../substrate/primitives/keyring" }
futures = { version = "0.3.21", features = ["thread-pool"] }
assert_matches = "1.4.0"
node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
sp-core = { path = "../../../../substrate/primitives/core" }
test-helpers = { package = "polkadot-primitives-test-helpers", path = "../../../primitives/test-helpers" }
